--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form action="" method="GET">
 
       <!-- Add a label for 'fullname'-->
-      <input type="text" name="fullname">
+      <label for="fullname">Fullname</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
