--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <!-- Add a label for 'fullname'-->
       <label for="fullname">fullname</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
+      <input type="text" id="">
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
 
