--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 
       <!-- Add a label for 'email'-->
-
+      <label for="email">email</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-
+      <input type="email">
 
       <!-- Add a label for 'phone'-->
 
