Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Add a label for 'fullname'-->
       <label for="fullname">fullname</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <input type="text" id="fullname" placeholder="Enter Name">
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name">
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
 
@@ -27,7 +27,7 @@
       <input type="email" id="email" name="email" placeholder="Enter Email">
 
       <!-- Add a label for 'phone'-->
-
+      <label for=""><>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
 
