--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <input type="email" id="email" name="email" placeholder="Enter Email">
 
       <!-- Add a label for 'phone'-->
-      <label for=""><>
+      <label for="phone">phone</label>
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-
+      <input type="tel" id="phone" name=phone placeholder="Enter Telephone">
 
       <!-- Add a label for 'message'-->
 
