--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Add a label for 'fullname'-->
       <label for="fullname">fullname</label>
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <input type="text" id="fullname" name="fullname" placeholder="Enter Name">
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
       <!-- Include the place holder text "Enter Name" and make this input required -->
 
 
@@ -24,7 +24,7 @@
       <label for="email">email</label>
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <input type="email" id="email" name="email" placeholder="Enter Email">
+      <input type="email" id="email" name="email" placeholder="Enter Email" required>
 
       <!-- Add a label for 'phone'-->
       <label for="phone">phone</label>
