--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <label for="message">message</label>
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <input type="message">
+      <input type="message" id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
+      
 
 
       <!-- Add an input with the type set to 'submit' -->
