--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
       <input type="message" id="message" name="message" placeholder="Enter Message">
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-      
+      <input type="checkbox" id="checkbox">
 
 
       <!-- Add an input with the type set to 'submit' -->
+      <input type="submit">
     </form>
     
   </body>
